apps/staging/overseerr/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: overseerr
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
    cert-manager.io/common-name: overseerr.dev.myrobertson.net
    cert-manager.io/private-key-algorithm: "ECDSA"
spec:
  gatewayClassName: istio
  listeners:
  - name: overseerr
    hostname: overseerr.dev.myrobertson.net
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: overseerr-cert
  infrastructure:
    labels:
      istio-injection: enabled
    annotations:
      external-dns.alpha.kubernetes.io/hostname: overseerr.dev.myrobertson.net
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: overseerr
spec:
  parentRefs:
  - name: overseerr
  hostnames: ["overseerr.dev.myrobertson.net"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: overseerr
      port: 5055
