apps/staging/overseerr/httpRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
  namespace: default
spec:
  parentRefs:
  - name: myrobertson-com-gateway
    namespace: default
  hostnames: ["seerr.staging.myrobertson.net"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: seerr
      port: 5055
